getdeliveryaddresses-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: getdeliveryaddresses
  name: getdeliveryaddresses
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: getdeliveryaddresses
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/kong-net: "true"
        io.kompose.service: getdeliveryaddresses
    spec:
      containers:
        - env:
            - name: customerURL
              value: http://customer:5004/customer
          image: ninjatruck/get_delivery_addresses:g5t7
          name: getDeliveryAddresses
          resources: {}
      restartPolicy: Always
status: {}
