kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: kong
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kong
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/kong-net: "true"
        io.kompose.service: kong
    spec:
      containers:
        - env:
            - name: KONG_ADMIN_LISTEN
              value: 0.0.0.0:8001
            - name: KONG_DATABASE
              value: postgres
            - name: KONG_PG_HOST
              value: kong-database
            - name: KONG_PG_PASSWORD
              value: password
            - name: KONG_PG_USER
              value: kong
            - name: KONG_PROXY_LISTEN
              value: 0.0.0.0:8000
          image: kong:2.0.4
          name: kong
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
