loaddashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: loaddashboard
  name: loaddashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: loaddashboard
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/kong-net: "true"
        io.kompose.service: loaddashboard
    spec:
      containers:
        - env:
            - name: driverURL
              value: http://driver:5002/driver
            - name: loginURL
              value: http://login:5001/authenticate
            - name: parcelURL
              value: http://parcel:5003/parcel
          image: ninjatruck/load_dashboard:g5t7
          name: loadDashboard
          resources: {}
      restartPolicy: Always
status: {}
