parcel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: parcel
  name: parcel
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: parcel
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/kong-net: "true"
        io.kompose.service: parcel
    spec:
      containers:
        - image: ninjatruck/parcel:g5t7
          name: parcel
          resources: {}
      restartPolicy: Always
status: {}
