updateparcelstatus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: updateparcelstatus
  name: updateparcelstatus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: updateparcelstatus
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/kong-net: "true"
        io.kompose.service: updateparcelstatus
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: customerURL
              value: http://customer:5004/customer
            - name: parcelURL
              value: http://parcel:5003/parcel
            - name: rabbit_host
              value: rabbitmq
            - name: rabbit_port
              value: "5672"
          image: ninjatruck/update_parcel_status:g5t7
          name: updateParcelStatus
          resources: {}
      restartPolicy: Always
status: {}
